client verification
